# translatethenews

./: .gitignore  README.md  WELCOME.md  stack.yaml  translatethenews.cabal
app/: Article.hs  Main.hs  Parsers.hs  Routing.hs  Types.hs  Util.hs  View.hs
app/TTN/: Bing.hs  Hidden.hs.example  Routes.hs  Util.hs
app/TTN/Controller/: Article.hs  Core.hs  Migrate.hs  Shared.hs  User.hs
app/TTN/Model/: Article.hs  Core.hs  Language.hs  Translation.hs  User.hs
app/TTN/View/: Article.hs  Core.hs  Shared.hs  User.hs
db/: articles.sql  translations.sql  users.sql
src/Language/: Bing.hs
static/css/: style.css
