name:                translatethenews
version:             0.1.0.0
synopsis:            Code for translatethenews.org
description:         Please see README.md
homepage:            https://github.com/samvher/translatethenews#readme
license:             MIT
license-file:        LICENSE
author:              Sam van Herwaarden
maintainer:          samvherwaarden@protonmail.com
copyright:           Sam van Herwaarden
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable translatethenews
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       TTN.ConnInfo
                     , TTN.Routes
                     , TTN.Util
                     , TTN.Controller.Article
                     , TTN.Controller.Core
                     , TTN.Controller.User
                     , TTN.Model.Article
                     , TTN.Model.Core
                     , TTN.Model.User
                     , TTN.View.Article
                     , TTN.View.Core
                     , TTN.View.User
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , translatethenews
                     , attoparsec
                     , bytestring
                     , cryptohash-sha256
                     , digestive-functors
                     , digestive-functors-lucid
                     , http-types
                     , hvect
                     , lucid
                     , path-pieces
                     , postgresql-simple
                     , reroute
                     , split
                     , Spock
                     , Spock-digestive
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010

test-suite translatethenews-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , translatethenews
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/samvher/translatethenews
